// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseInput /> should render 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
        >
          <TextInput
            accessibilityDescribedBy=""
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="name-1-input-2"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            valueComponentType="text"
          />
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<BaseInput /> should render input with no borders 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={true}
        style={
          [
            {},
            {
              "borderRadius": 0,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={true}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 0)",
                "borderColor": "hsla(0, 0%, 100%, 0)",
                "borderRadius": 0,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
              },
            ]
          }
        >
          <TextInput
            accessibilityDescribedBy=""
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="name-49-input-50"
            isFocused={false}
            isTableInputCell={true}
            isTextArea={false}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            valueComponentType="text"
          />
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<BaseInput /> should render input with no borders in error state 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={true}
        style={
          [
            {},
            {
              "borderRadius": 0,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={true}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(4, 74%, 49%, 0.09)",
                "borderColor": "hsla(0, 0%, 100%, 0)",
                "borderRadius": 0,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(4, 74%, 49%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
              },
            ]
          }
          validationState="error"
        >
          <TextInput
            accessibilityDescribedBy="name-61-errortext-63"
            accessibilityInvalid={true}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="name-61-input-62"
            isFocused={false}
            isTableInputCell={true}
            isTextArea={false}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            validationState="error"
            valueComponentType="text"
          />
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          id="name-61-errortext-63"
          style={
            [
              {
                "marginTop": 4,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              data-blade-component="box"
              flexShrink={0}
              style={
                [
                  {
                    "flexShrink": 0,
                    "marginTop": 2,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="12px"
                bbWidth="12px"
                data-blade-component="icon"
                display="block"
                fill="none"
                focusable={false}
                height="12px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {
                        "display": "block",
                      },
                    ],
                    {
                      "flex": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="12px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                    fill={
                      {
                        "payload": 4292422944,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                    fill={
                      {
                        "payload": 4292422944,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    clipRule={0}
                    d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                    fill={
                      {
                        "payload": 4292422944,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              accessible={true}
              color="feedback.text.negative.intense"
              data-blade-component="text"
              fontFamily="text"
              fontSize={50}
              fontStyle="italic"
              fontWeight="regular"
              lineHeight={50}
              style={
                [
                  {
                    "color": "hsla(4, 74%, 49%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 11,
                    "fontStyle": "italic",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Something went wrong
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<BaseInput /> should render input with no borders in success state 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(150, 100%, 32%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(150, 100%, 32%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
          validationState="success"
        >
          <TextInput
            accessibilityDescribedBy="name-73-successtext-77"
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="name-73-input-74"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            validationState="success"
            valueComponentType="text"
          />
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          id="name-73-successtext-77"
          style={
            [
              {
                "marginTop": 4,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              data-blade-component="box"
              flexShrink={0}
              style={
                [
                  {
                    "flexShrink": 0,
                    "marginTop": 2,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="12px"
                bbWidth="12px"
                data-blade-component="icon"
                display="block"
                fill="none"
                focusable={false}
                height="12px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {
                        "display": "block",
                      },
                    ],
                    {
                      "flex": 0,
                      "height": 12,
                      "width": 12,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="12px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.31658 18.0976 8.68342 18.0976 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                    fill={
                      {
                        "payload": 4278225477,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              accessible={true}
              color="feedback.text.positive.intense"
              data-blade-component="text"
              fontFamily="text"
              fontSize={50}
              fontStyle="italic"
              fontWeight="regular"
              lineHeight={50}
              style={
                [
                  {
                    "color": "hsla(150, 100%, 27%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 11,
                    "fontStyle": "italic",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              This seems valid
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<BaseInput /> should render with icons 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
        >
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                    "paddingLeft": 12,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="16px"
                bbWidth="16px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="16px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 16,
                      "width": 16,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="16px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                    fill={
                      {
                        "payload": 4285959847,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGPath
                    clipRule={0}
                    d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                    fill={
                      {
                        "payload": 4285959847,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
          <TextInput
            accessibilityDescribedBy=""
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="name-85-input-86"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="default"
            leadingIcon={[Function]}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholder="First Last"
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            trailingIcon={[Function]}
            valueComponentType="text"
          />
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              alignItems="center"
              data-blade-component="base-box"
              display="flex"
              justifyContent="center"
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "paddingRight": 12,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="16px"
                bbWidth="16px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="16px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 16,
                      "width": 16,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="16px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                    fill={
                      {
                        "payload": 4282406509,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<BaseInput /> should render with large size input 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={100}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 20,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Enter name
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="large"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(150, 100%, 32%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(150, 100%, 32%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
          validationState="success"
        >
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                    "paddingLeft": 12,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="20px"
                bbWidth="20px"
                data-blade-component="icon"
                fill="none"
                focusable={false}
                height="20px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {},
                    ],
                    {
                      "flex": 0,
                      "height": 20,
                      "width": 20,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="20px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12Z"
                    fill={
                      {
                        "payload": 4285959847,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGPath
                    clipRule={0}
                    d="M12 3C8.8711 3 6.22807 4.48937 4.23728 6.25113C2.24678 8.01264 0.822273 10.1194 0.105573 11.5528C-0.0351909 11.8343 -0.0351909 12.1657 0.105573 12.4472C0.822273 13.8806 2.24678 15.9874 4.23728 17.7489C6.22807 19.5106 8.8711 21 12 21C15.1289 21 17.7719 19.5106 19.7627 17.7489C21.7532 15.9874 23.1777 13.8806 23.8944 12.4472C24.0352 12.1657 24.0352 11.8343 23.8944 11.5528C23.1777 10.1194 21.7532 8.01264 19.7627 6.25113C17.7719 4.48937 15.1289 3 12 3ZM5.56272 16.2511C3.98954 14.8589 2.80913 13.2146 2.13142 12C2.80913 10.7854 3.98954 9.14106 5.56272 7.74887C7.3386 6.17729 9.5289 5 12 5C14.4711 5 16.6614 6.17729 18.4373 7.74887C20.0105 9.14106 21.1909 10.7854 21.8686 12C21.1909 13.2146 20.0105 14.8589 18.4373 16.2511C16.6614 17.8227 14.4711 19 12 19C9.5289 19 7.3386 17.8227 5.56272 16.2511Z"
                    fill={
                      {
                        "payload": 4285959847,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
          <TextInput
            accessibilityDescribedBy="name-97-successtext-101"
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="name-97-input-98"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="default"
            leadingIcon={[Function]}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholder="First Last"
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 48,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 48,
                  "paddingBottom": 12,
                  "paddingLeft": 8,
                  "paddingRight": 8,
                  "paddingTop": 12,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            trailingIcon={[Function]}
            validationState="success"
            valueComponentType="text"
          />
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              alignItems="center"
              data-blade-component="base-box"
              display="flex"
              justifyContent="center"
              style={
                [
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "paddingRight": 12,
                  },
                ]
              }
            >
              <View
                alignItems="center"
                data-blade-component="box"
                display="flex"
                justifyContent="center"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <RNSVGSvgView
                  accessibilityElementsHidden={true}
                  align="xMidYMid"
                  bbHeight="20px"
                  bbWidth="20px"
                  data-blade-component="icon"
                  fill="none"
                  focusable={false}
                  height="20px"
                  importantForAccessibility="no-hide-descendants"
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      [
                        {},
                      ],
                      {
                        "flex": 0,
                        "height": 20,
                        "width": 20,
                      },
                    ]
                  }
                  vbHeight={24}
                  vbWidth={24}
                  width="20px"
                >
                  <RNSVGGroup
                    fill={null}
                    propList={
                      [
                        "fill",
                      ]
                    }
                  >
                    <RNSVGPath
                      d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                      fill={
                        {
                          "payload": 4278225477,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <Modal
                accessibilityLabel="Success"
                collapsable={false}
                hardwareAccelerated={false}
                transparent={true}
                visible={false}
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          id="name-97-successtext-101"
          style={
            [
              {
                "marginTop": 8,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              data-blade-component="box"
              flexShrink={0}
              style={
                [
                  {
                    "flexShrink": 0,
                    "marginTop": 2,
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                align="xMidYMid"
                bbHeight="16px"
                bbWidth="16px"
                data-blade-component="icon"
                display="block"
                fill="none"
                focusable={false}
                height="16px"
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    [
                      {
                        "display": "block",
                      },
                    ],
                    {
                      "flex": 0,
                      "height": 16,
                      "width": 16,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="16px"
              >
                <RNSVGGroup
                  fill={null}
                  propList={
                    [
                      "fill",
                    ]
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.31658 18.0976 8.68342 18.0976 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
                    fill={
                      {
                        "payload": 4278225477,
                        "type": 0,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              accessible={true}
              color="feedback.text.positive.intense"
              data-blade-component="text"
              fontFamily="text"
              fontSize={100}
              fontStyle="italic"
              fontWeight="regular"
              lineHeight={50}
              style={
                [
                  {
                    "color": "hsla(150, 100%, 27%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontStyle": "italic",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 16,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Success
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<BaseInput /> should render with trailingButton 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="base-box"
    style={
      [
        {},
      ]
    }
  >
    <View
      data-blade-component="base-box"
      display="flex"
      flexDirection="column"
      position="relative"
      style={
        [
          {
            "display": "flex",
            "flexDirection": "column",
            "position": "relative",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="space-between"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <View
          data-blade-component="base-box"
          style={
            [
              {
                "marginBottom": 4,
                "marginRight": 16,
              },
            ]
          }
        >
          <View
            alignItems="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            gap="spacing.0"
            maxHeight="36px"
            style={
              [
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "gap": 0,
                  "maxHeight": 36,
                },
              ]
            }
          >
            <Text
              accessible={true}
              color="surface.text.gray.subtle"
              data-blade-component="text"
              fontFamily="text"
              fontSize={75}
              fontStyle="normal"
              fontWeight="semibold"
              lineHeight={75}
              numberOfLines={2}
              style={
                [
                  {
                    "color": "hsla(211, 26%, 34%, 1)",
                    "fontFamily": "Inter",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "letterSpacing": 0,
                    "lineHeight": 18,
                    "marginBottom": 0,
                    "marginLeft": 0,
                    "marginRight": 0,
                    "marginTop": 0,
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textDecorationLine": "none",
                  },
                ]
              }
            >
              Coupon
            </Text>
            <View
              data-blade-component="visually-hidden"
              style={
                [
                  {
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": 1,
                    "left": -10000,
                    "marginBottom": -1,
                    "marginLeft": 0,
                    "marginRight": -1,
                    "marginTop": 0,
                    "overflow": "hidden",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                color="surface.text.gray.normal"
                data-blade-component="text"
                fontFamily="text"
                fontSize={100}
                fontStyle="normal"
                fontWeight="regular"
                lineHeight={100}
                style={
                  [
                    {
                      "color": "hsla(212, 39%, 16%, 1)",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 20,
                      "marginBottom": 0,
                      "marginLeft": 0,
                      "marginRight": 0,
                      "marginTop": 0,
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationLine": "none",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        currentInteraction="default"
        data-blade-component="base-box"
        isTableInputCell={false}
        style={
          [
            {},
            {
              "borderRadius": 4,
              "width": "100%",
            },
          ]
        }
      >
        <View
          currentInteraction="default"
          isTableInputCell={false}
          onClick={[Function]}
          setShowAllTagsWithAnimation={[Function]}
          size="medium"
          style={
            [
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 0,
                "display": "flex",
                "flexDirection": "row",
                "position": "relative",
                "width": "100%",
              },
              {},
              {
                "backgroundColor": "hsla(0, 0%, 100%, 1)",
                "borderColor": "hsla(214, 28%, 84%, 1)",
                "borderRadius": 4,
                "borderStyle": "solid",
                "borderWidth": 1,
              },
            ]
          }
        >
          <TextInput
            accessibilityDescribedBy=""
            accessibilityInvalid={false}
            accessibilityRequired={false}
            accessibilityState={
              {
                "disabled": false,
                "expanded": undefined,
              }
            }
            accessible={true}
            data-blade-component="styled-base-input"
            editable={true}
            hasTags={false}
            id="coupon-109-input-110"
            isFocused={false}
            isTableInputCell={false}
            isTextArea={false}
            keyboardType="default"
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onEndEditing={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={[Function]}
            placeholderTextColor="hsla(211, 20%, 52%, 0.32)"
            secureTextEntry={false}
            style={
              [
                {
                  "backgroundColor": "hsla(0, 0%, 100%, 0)",
                  "color": "hsla(211, 26%, 34%, 1)",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Inter",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "height": 36,
                  "letterSpacing": 0,
                  "marginBottom": 0,
                  "marginLeft": 0,
                  "marginRight": 0,
                  "marginTop": 0,
                  "minHeight": 36,
                  "paddingBottom": 8,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 8,
                  "textAlignVertical": "top",
                  "textDecorationLine": "none",
                  "width": "100%",
                },
              ]
            }
            valueComponentType="text"
          />
          <View
            alignItems="center"
            alignSelf="center"
            data-blade-component="base-box"
            display="flex"
            flexDirection="row"
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              data-blade-component="base-box"
              display="flex"
              style={
                [
                  {
                    "display": "flex",
                    "paddingRight": 12,
                  },
                ]
              }
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignSelf": "flex-start",
                      "backgroundColor": "transparent",
                      "borderColor": "black",
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "outline": "none",
                      "paddingBottom": 0,
                      "paddingLeft": 0,
                      "paddingRight": 0,
                      "paddingTop": 0,
                      "textDecorationColor": "black",
                      "textDecorationLine": "none",
                      "textDecorationStyle": "solid",
                    },
                  ]
                }
              >
                <View
                  alignItems="center"
                  className="content-container"
                  data-blade-component="base-box"
                  display="flex"
                  flexDirection="row"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                      },
                    ]
                  }
                >
                  <Text
                    accessible={true}
                    color="interactive.text.primary.normal"
                    data-blade-component="base-text"
                    fontSize={100}
                    fontWeight="medium"
                    lineHeight={100}
                    style={
                      [
                        {
                          "color": "hsla(227, 71%, 51%, 1)",
                          "fontFamily": "Inter",
                          "fontSize": 14,
                          "fontStyle": "normal",
                          "fontWeight": "500",
                          "letterSpacing": 0,
                          "lineHeight": 20,
                          "marginBottom": 0,
                          "marginLeft": 0,
                          "marginRight": 0,
                          "marginTop": 0,
                          "paddingBottom": 0,
                          "paddingLeft": 0,
                          "paddingRight": 0,
                          "paddingTop": 0,
                          "textAlign": "center",
                          "textDecorationLine": "none",
                        },
                      ]
                    }
                    textAlign="center"
                    textDecorationLine="none"
                  >
                    Apply
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      data-blade-component="base-box"
      style={
        [
          {
            "marginLeft": 0,
          },
        ]
      }
    >
      <View
        data-blade-component="base-box"
        display="flex"
        flexDirection="row"
        justifyContent="flex-end"
        style={
          [
            {
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
